appId: com.choosegod.app
---
- launchApp
- assertVisible: "Welcome"
- tapOn:
    id: "get-started-button"
- assertVisible: ".*" # carousel screen 1
- swipeLeft
- swipeLeft
- tapOn:
    id: "complete-onboarding-button"
- assertVisible: ".*" # main app screen after onboarding
